examples/bad/13-16-type-checking-legendary-test-with-if-from-statement.hp
if 2 + 2 then anything else anything;
